<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NotiUFG</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_login">LOGIN</string>
    <string name="button_entrar">ENTRAR</string>
    <string name="button_cadastrar">CADASTRAR</string>
    <string name="text_ou">----- ou -----</string>
    <string name="title_activity_login">UFG</string>
    <string name="senha">SENHA</string>
    <string name="button_entrar_minusculo">Entrar</string>
    <string name="title_activity_novo_usuario">Cadastrar</string>
    <string name="nome">Nome:</string>
    <string name="geral">Geral</string>
    <string name="email">E-mail:</string>
    <string name="telefone">Telefone:</string>
    <string name="cpf">CPF:</string>
    <string name="senha2">Senha:</string>
    <string name="confirmarSenha">Confirmar Senha:</string>
    <string name="adiconar">Adicionar</string>
    <string name="configuracoes">Configurações</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_configuracao">ConfiguracaoActivity</string>
    <string name="ativa">Ativa</string>
    <string name="desativa">Desativa</string>
    <string name="curso">Curso</string>
    <string name="EngenhariaDeSoftware">Engenharia de Software</string>
    <string name="disciplinas">Disciplinas</string>
    <string name="integracao">Integração</string>
    <string name="dsc">DSC</string>
    <string name="dsp">DSP</string>
    <string name="dsw">DSW</string>
    <string name="mobile">Mobile</string>
    <string name="matricula">Matricula:</string>
    <string name="cursos_prompt">Choose a country</string>

    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Find People</item>
        <item>Photos</item>
        <item>Communities</item>
        <item>Pages</item>
        <item>What\'s Hot</item>
    </string-array>
    
    <string-array name="cursos_arrays">
        <item>Engenharia de Software</item>
        <item>Ciencia da Computacao</item>
        <item>Letras</item>
        <item>Engenharia Civil</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
    </array>

    <string name="title_activity_notificacao">NotificacaoActivity</string>

    <!-- Fragment -->
    <string name="title_fragment_notifications_view">Visualizar notificações</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_single_notification">SingleNotificationActivity</string>

</resources>
