<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
        android:layout_width="match_parent" 
        android:layout_height="match_parent" 
        android:orientation="vertical" > 
        
	<TextView 
		android:id="@+id/textView2" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/nome" /> 
	
	<EditText 
		android:id="@+id/ednome" 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" > 
		<requestFocus /> 
	</EditText> 
	
	<TextView 
		android:id="@+id/textView4" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/cpf" /> 
	
	<EditText 
		android:id="@+id/edcpf" 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" > 
	</EditText> 
	
	<TextView 
		android:id="@+id/textView3" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/email" /> 
	
	<EditText 
		android:id="@+id/edEmail" 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" /> 
	
	<TextView 
		android:id="@+id/textView4" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/telefone" /> 
	
	<EditText 
		android:id="@+id/edTelefone" 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" /> 
	
	<LinearLayout 
		android:id="@+id/linearLayout1" 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:orientation="horizontal" > 
	
		<Button 
			android:id="@+id/btadicionar" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/adiconar" /> 
	</LinearLayout> 
	
</LinearLayout>
