<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1363B3">
    
    <ImageView
                android:id="@+id/ImageView01"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1.00"
                android:src="@drawable/icon_ufg_branco"
                android:background="#1363B3" />
    <Button
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/button_login"
	    android:onClick="login" 
	    android:layout_gravity="center"/>
    
    <TextView
        android:id="@+id/textviewdatefornocallspage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_ou"
        android:textSize="25sp" />
    
    <Button
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/button_entrar"
	    android:onClick="entrar"
	    android:layout_gravity="center"/>
</LinearLayout>
