<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.notiufg.activity.LoginActivity$PlaceholderFragment"
    android:orientation="vertical" >

   <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/button_login"
        android:textSize="25sp" />
    
   <EditText
	    android:id="@+id/fname"
	    android:layout_width="250dip"
	    android:layout_height="wrap_content"
	    android:hint="@string/button_login"
	    android:gravity="center"/>
   
    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/senha"
        android:textSize="25sp" />
    
    <EditText
	    android:id="@+id/fname2"
	    android:layout_width="250dip"
	    android:layout_height="wrap_content"
	    android:hint="@string/senha"
	    android:gravity="center"/>
    
    <Button
        android:id="@+id/buttonEntrar"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/button_entrar_minusculo"
	    android:onClick="validarLogin" 
	    android:layout_gravity="right"/>

</LinearLayout>
